fix a function, letter spacing, and a link

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Tilt Neon', cursive;
+  letter-spacing: .1rem;
 }
 ul, li {
   list-style: none;
